feat: tiktok database library

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/contracts(|/.*)$": "<rootDir>/libs/contracts/src/$1"
+      "^@app/contracts(|/.*)$": "<rootDir>/libs/contracts/src/$1",
+      "^@app/database-tiktok(|/.*)$": "<rootDir>/libs/database-tiktok/src/$1"
     }
   }
 }
