--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.1.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.9.0",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
