--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.1.1",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "mongoose": "^8.15.0",
     "pg": "^8.16.0",
+    "puppeteer": "^24.9.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -81,6 +87,7 @@
     ],
     "moduleNameMapper": {
       "^@app/contracts(|/.*)$": "<rootDir>/libs/contracts/src/$1",
+      "^@app/database-scrooge(|/.*)$": "<rootDir>/libs/database-scrooge/src/$1",
       "^@app/database-tiktok(|/.*)$": "<rootDir>/libs/database-tiktok/src/$1"
     }
   }
