--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
+        "@types/pug": "^2.0.10",
         "@types/supertest": "^6.0.2",
         "concurrently": "^9.1.2",
         "dotenv-cli": "^8.0.0",
