--- a/package.json
+++ b/package.json
@@ -1,109 +1,113 @@
 {
-    "name": "gdec-orderhub-etl",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "private": true,
-    "license": "UNLICENSED",
-    "scripts": {
-        "typeorm": "typeorm-ts-node-commonjs",
-        "start:tiktok-receipt": "nest start tiktok-receipt --watch",
-        "start:api-gateway": "nest start api-gateway --watch",
-        "start:tiktok-fetcher": "nest start tiktok-fetcher --watch",
-        "start:tiktok-loader": "nest start tiktok-loader --watch",
-        "start:tiktok-transformer": "nest start tiktok-transformer --watch",
-        "start:all": "concurrently \"npm run start:api-gateway\" \"npm run start:tiktok-fetcher\" \"npm run start:tiktok-loader\" \"npm run start:tiktok-transformer\" \"npm run start:tiktok-receipt\"",
-        "build": "nest build",
-        "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/apps/gdec-orderhub-etl/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./apps/gdec-orderhub-etl/test/jest-e2e.json",
-        "generate-migration": "ts-node scripts/database_orderhub_migration.ts",
-        "run-migration": "ts-node scripts/run_migration.ts"
+  "name": "gdec-orderhub-etl",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "typeorm": "typeorm-ts-node-commonjs",
+    "start:tiktok-receipt": "nest start tiktok-receipt --watch",
+    "start:api-gateway": "nest start api-gateway --watch",
+    "start:tiktok-fetcher": "nest start tiktok-fetcher --watch",
+    "start:tiktok-loader": "nest start tiktok-loader --watch",
+    "start:tiktok-transformer": "nest start tiktok-transformer --watch",
+    "start:all": "concurrently \"npm run start:api-gateway\" \"npm run start:tiktok-fetcher\" \"npm run start:tiktok-loader\" \"npm run start:tiktok-transformer\" \"npm run start:tiktok-receipt\"",
+    "build": "nest build",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/apps/gdec-orderhub-etl/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./apps/gdec-orderhub-etl/test/jest-e2e.json",
+    "generate-migration": "ts-node scripts/database_orderhub_migration.ts",
+    "run-migration": "ts-node scripts/run_migration.ts"
+  },
+  "dependencies": {
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^11.1.1",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "@types/winston": "^2.4.4",
+    "axios": "^1.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "mongoose": "^8.15.0",
+    "nest-winston": "^1.10.2",
+    "pg": "^8.16.0",
+    "pug": "^3.0.3",
+    "puppeteer": "^24.9.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "@nestjs/cli": "^11.0.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.1",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.7",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.7",
+    "@types/pug": "^2.0.10",
+    "@types/supertest": "^6.0.2",
+    "concurrently": "^9.1.2",
+    "dotenv-cli": "^8.0.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.2",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typeorm-ts-node-commonjs": "^0.3.20",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
     },
-    "dependencies": {
-        "@nestjs/common": "^11.0.1",
-        "@nestjs/config": "^4.0.2",
-        "@nestjs/core": "^11.0.1",
-        "@nestjs/mapped-types": "*",
-        "@nestjs/microservices": "^11.1.1",
-        "@nestjs/mongoose": "^11.0.3",
-        "@nestjs/platform-express": "^11.0.1",
-        "@nestjs/swagger": "^11.2.0",
-        "@nestjs/typeorm": "^11.0.0",
-        "axios": "^1.9.0",
-        "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.2",
-        "mongoose": "^8.15.0",
-        "pg": "^8.16.0",
-        "pug": "^3.0.3",
-        "puppeteer": "^24.9.0",
-        "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.18.0",
-        "@nestjs/cli": "^11.0.0",
-        "@nestjs/schematics": "^11.0.0",
-        "@nestjs/testing": "^11.0.1",
-        "@swc/cli": "^0.6.0",
-        "@swc/core": "^1.10.7",
-        "@types/express": "^5.0.0",
-        "@types/jest": "^29.5.14",
-        "@types/node": "^22.10.7",
-        "@types/pug": "^2.0.10",
-        "@types/supertest": "^6.0.2",
-        "concurrently": "^9.1.2",
-        "dotenv-cli": "^8.0.0",
-        "eslint": "^9.18.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.2",
-        "globals": "^16.0.0",
-        "jest": "^29.7.0",
-        "prettier": "^3.4.2",
-        "source-map-support": "^0.5.21",
-        "supertest": "^7.0.0",
-        "ts-jest": "^29.2.5",
-        "ts-loader": "^9.5.2",
-        "ts-node": "^10.9.2",
-        "tsconfig-paths": "^4.2.0",
-        "typeorm-ts-node-commonjs": "^0.3.20",
-        "typescript": "^5.7.3",
-        "typescript-eslint": "^8.20.0"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": ".",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "./coverage",
-        "testEnvironment": "node",
-        "roots": [
-            "<rootDir>/apps/",
-            "<rootDir>/libs/"
-        ],
-        "moduleNameMapper": {
-            "^@app/contracts(|/.*)$": "<rootDir>/libs/contracts/src/$1",
-            "^@app/database-orderhub(|/.*)$": "<rootDir>/libs/database-orderhub/src/$1",
-            "^@app/database-scrooge(|/.*)$": "<rootDir>/libs/database-scrooge/src/$1",
-            "^@app/database-tiktok(|/.*)$": "<rootDir>/libs/database-tiktok/src/$1"
-        }
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/contracts(|/.*)$": "<rootDir>/libs/contracts/src/$1",
+      "^@app/database-orderhub(|/.*)$": "<rootDir>/libs/database-orderhub/src/$1",
+      "^@app/database-scrooge(|/.*)$": "<rootDir>/libs/database-scrooge/src/$1",
+      "^@app/database-tiktok(|/.*)$": "<rootDir>/libs/database-tiktok/src/$1",
+      "^@app/logging(|/.*)$": "<rootDir>/libs/logging/src/$1"
     }
+  }
 }
