--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ lerna-debug.log*
 # dotenv environment variable files
 .env
 .env.development.local
+# environment variables
+.env
 .env.test.local
 .env.production.local
 .env.local
