fix: ui for the web interface

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,14 @@ TIKTOK_DB_PASSWORD=your_tiktok_password_here
 TIKTOK_DB_USERNAME=postgres
 
 # ===========================================
+# AWS S3 Configuration (Invoice Storage)
+# ===========================================
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_access_key_here
+AWS_SECRET_ACCESS_KEY=your_secret_key_here
+AWS_S3_BUCKET_NAME=gdec-orderhub-invoices
+
+# ===========================================
 # Additional Notes
 # ===========================================
 # This is a template file. Copy this to .env and fill in your actual values.
