--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "verify-env": "ts-node scripts/verify-env-config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.821.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -43,6 +44,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^16.5.0",
     "mongoose": "^8.15.0",
     "nest-winston": "^1.10.2",
     "pg": "^8.16.0",
