--- a/package.json
+++ b/package.json
@@ -27,21 +27,34 @@
     "test:e2e": "jest --config ./apps/gdec-orderhub-etl/test/jest-e2e.json",
     "generate-migration": "ts-node scripts/database_orderhub_migration.ts",
     "run-migration": "ts-node scripts/run_migration.ts",
-    "verify-env": "ts-node scripts/verify-env-config.ts"
+    "verify-env": "ts-node scripts/verify-env-config.ts",
+    "flush-redis": "ts-node scripts/flush-redis.ts",
+    "flush-redis-bash": "./scripts/flush-redis.sh",
+    "test:scalability": "jest --config scripts/load-testing/jest.config.js",
+    "test:load:k6": "k6 run scripts/load-testing/k6-load-test.js",
+    "test:load:artillery": "artillery run scripts/load-testing/artillery-load-test.yml",
+    "test:load:all": "npm run test:scalability && npm run test:load:k6 && npm run test:load:artillery",
+    "test:redis-performance": "jest scripts/load-testing/redis-performance.spec.ts",
+    "test:db-performance": "jest scripts/load-testing/database-performance.spec.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.821.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^11.1.1",
+    "@nestjs/microservices": "^11.1.2",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/redis": "^4.0.11",
     "@types/winston": "^2.4.4",
     "axios": "^1.9.0",
+    "cache-manager": "^6.4.3",
+    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
@@ -50,6 +63,7 @@
     "pg": "^8.16.0",
     "pug": "^3.0.3",
     "puppeteer": "^24.9.0",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "winston": "^3.17.0"
@@ -66,7 +80,11 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/pug": "^2.0.10",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^6.0.2",
+    "0x": "^5.8.0",
+    "artillery": "^2.0.23",
+    "clinic": "^13.0.0",
     "concurrently": "^9.1.2",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.18.0",
@@ -74,6 +92,8 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
+    "k6": "^0.0.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
