feat: health checker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,12 @@
       ],
       "@app/logging/*": [
         "libs/logging/src/*"
+      ],
+      "@app/health": [
+        "libs/health/src"
+      ],
+      "@app/health/*": [
+        "libs/health/src/*"
       ]
     }
   }
