--- a/package.json
+++ b/package.json
@@ -29,13 +29,7 @@
     "run-migration": "ts-node scripts/run_migration.ts",
     "verify-env": "ts-node scripts/verify-env-config.ts",
     "flush-redis": "ts-node scripts/flush-redis.ts",
-    "flush-redis-bash": "./scripts/flush-redis.sh",
-    "test:scalability": "jest --config scripts/load-testing/jest.config.js",
-    "test:load:k6": "k6 run scripts/load-testing/k6-load-test.js",
-    "test:load:artillery": "artillery run scripts/load-testing/artillery-load-test.yml",
-    "test:load:all": "npm run test:scalability && npm run test:load:k6 && npm run test:load:artillery",
-    "test:redis-performance": "jest scripts/load-testing/redis-performance.spec.ts",
-    "test:db-performance": "jest scripts/load-testing/database-performance.spec.ts"
+    "flush-redis-bash": "./scripts/flush-redis.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.821.0",
@@ -82,9 +76,6 @@
     "@types/pug": "^2.0.10",
     "@types/redis": "^4.0.11",
     "@types/supertest": "^6.0.2",
-    "0x": "^5.8.0",
-    "artillery": "^2.0.23",
-    "clinic": "^13.0.0",
     "concurrently": "^9.1.2",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.18.0",
@@ -92,8 +83,6 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "jest-html-reporters": "^3.1.7",
-    "k6": "^0.0.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
