--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "run-migration": "ts-node scripts/run_migration.ts",
     "verify-env": "ts-node scripts/verify-env-config.ts",
     "flush-redis": "ts-node scripts/flush-redis.ts",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop ecosystem.config.js",
+    "pm2:restart": "pm2 restart ecosystem.config.js",
+    "pm2:delete": "pm2 delete ecosystem.config.js",
+    "pm2:status": "pm2 status",
+    "pm2:logs": "pm2 logs",
+    "pm2:monit": "pm2 monit",
     "flush-redis-bash": "./scripts/flush-redis.sh"
   },
   "dependencies": {
