fix: build not working

--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "start:tiktok-loader": "nest start tiktok-loader --watch",
     "start:tiktok-transformer": "nest start tiktok-transformer --watch",
     "start:all": "concurrently \"npm run start:api-gateway\" \"npm run start:tiktok-fetcher\" \"npm run start:tiktok-loader\" \"npm run start:tiktok-transformer\" \"npm run start:tiktok-receipt\"",
-    "build": "nest build",
+    "build": "nest build --all",
+    "build:all": "nest build --all",
+    "build:api-gateway": "nest build api-gateway",
+    "build:tiktok-fetcher": "nest build tiktok-fetcher",
+    "build:tiktok-transformer": "nest build tiktok-transformer",
+    "build:tiktok-loader": "nest build tiktok-loader",
+    "build:tiktok-receipt": "nest build tiktok-receipt",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
