feat: added login features

--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/gdec-orderhub-etl/test/jest-e2e.json",
-    "generate-migration": "ts-node scripts/database_orderhub_migration.ts",
-    "run-migration": "ts-node scripts/run_migration.ts",
-    "verify-env": "ts-node scripts/verify-env-config.ts",
-    "flush-redis": "ts-node scripts/flush-redis.ts",
+    "generate-migration": "ts-node scripts/database/database_orderhub_migration.ts",
+    "run-migration": "ts-node scripts/database/run_migration.ts",
+    "verify-env": "ts-node scripts/utils/verify-env-config.ts",
+    "flush-redis": "ts-node scripts/utils/flush-redis.ts",
     "pm2:start": "npm run build && pm2 start ecosystem.config.js",
     "pm2:start:prod": "npm run build && pm2 start ecosystem.config.js --env production",
     "pm2:stop": "pm2 stop ecosystem.config.js",
@@ -44,31 +44,39 @@
     "pm2:status": "pm2 status",
     "pm2:logs": "pm2 logs",
     "pm2:monit": "pm2 monit",
-    "flush-redis-bash": "./scripts/flush-redis.sh"
+    "flush-redis-bash": "./scripts/utils/flush-redis.sh"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.826.0",
     "@aws-sdk/client-s3": "^3.821.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/microservices": "^11.1.2",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport-jwt": "^4.0.1",
     "@types/redis": "^4.0.11",
     "@types/winston": "^2.4.4",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cache-manager": "^6.4.3",
     "cache-manager-redis-store": "^3.0.1",
     "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.15.0",
     "nest-winston": "^1.10.2",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
     "pug": "^3.0.3",
     "puppeteer": "^24.9.0",
@@ -131,6 +139,7 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
+      "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
       "^@app/contracts(|/.*)$": "<rootDir>/libs/contracts/src/$1",
       "^@app/database-orderhub(|/.*)$": "<rootDir>/libs/database-orderhub/src/$1",
       "^@app/database-scrooge(|/.*)$": "<rootDir>/libs/database-scrooge/src/$1",
