--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@app/auth": [
+        "libs/auth/src"
+      ],
+      "@app/auth/*": [
+        "libs/auth/src/*"
+      ],
       "@app/contracts": [
         "libs/contracts/src"
       ],
@@ -42,17 +48,17 @@
       "@app/database-tiktok/*": [
         "libs/database-tiktok/src/*"
       ],
-      "@app/logging": [
-        "libs/logging/src"
-      ],
-      "@app/logging/*": [
-        "libs/logging/src/*"
-      ],
       "@app/health": [
         "libs/health/src"
       ],
       "@app/health/*": [
         "libs/health/src/*"
+      ],
+      "@app/logging": [
+        "libs/logging/src"
+      ],
+      "@app/logging/*": [
+        "libs/logging/src/*"
       ]
     }
   }
