fix: add script to run all services

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "run-migration": "ts-node scripts/database/run_migration.ts",
     "verify-env": "ts-node scripts/utils/verify-env-config.ts",
     "flush-redis": "ts-node scripts/utils/flush-redis.ts",
+    "start-mongodb": "./scripts/utils/start-mongodb.sh",
+    "start-services": "./scripts/utils/start-mongodb.sh && redis-server --daemonize yes",
+    "start-all-services": "./scripts/utils/start-all-services.sh",
     "pm2:start": "npm run build && pm2 start ecosystem.config.js",
     "pm2:start:prod": "npm run build && pm2 start ecosystem.config.js --env production",
     "pm2:stop": "pm2 stop ecosystem.config.js",
